--- a/public/app.scss
+++ b/public/app.scss
@@ -1,211 +1,39 @@
 * {
   box-sizing: border-box;
 }
+$bg: black;
+$fc: darkgrey;
+$bc: white;
 
-////////////////////////////////@at-root
-
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Permanent+Marker&display=swap");
 body {
-  text-align: center;
-  overflow: scroll;
-}
-#body {
-  display: grid;
-  margin-top: -20px;
-  grid-template-rows: 100px 1fr;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 1em;
-  text-align: center;
-  height: 100%;
-  overflow: scroll;
-}
-h1 {
-  font-size: 5em;
-}
-h2 {
-  font-size: 2.5em;
-}
-h1,
-h2 {
-  font-family: "Permanent Marker", cursive;
-  width: 100%;
-  text-align: center;
-  border: 1px solid darkgrey;
-  border-radius: 9px;
-  background: orange;
-  color: black;
-}
-#fruity {
-  border-radius: 0px !important;
   position: absolute;
+  font-family: "helvetica";
+  font-size: 0.9em;
+  font-weight: 900;
+  letter-spacing: 0.1em;
+  margin: 0;
+  height: 100%;
+  width: 100%;
   top: 0;
   left: 0;
-  z-index: 100;
-}
-button {
-  font-family: "Permanent Marker", cursive;
-  width: 100%;
-  text-align: center;
-  border: 1px solid darkgrey;
-  border-radius: 9px;
-  background: mediumseagreen;
-  color: white;
-}
-button:hover {
-  background: white !important;
-  color: mediumseagreen !important;
-}
-button,
-input {
-  width: calc(100%);
-  text-align: center;
-  margin-bottom: 1em;
-  font-size: 2em;
-}
-#set,
-#new_msg,
-#inf {
-  display: none;
-}
-#dias_canvas {
-  border: 0px solid black;
-  width: 500px;
-  height: 600px;
-  grid-row: 2;
-  grid-column: 1;
-  display: grid;
-  grid-template-rows: 500px 100px;
-  grid-template-columns: 500px;
-  margin-left: 1em;
+  background: $bg;
   overflow: hidden;
-  justify-self: end;
 }
-#minty,
-#swap,
-#community,
-#info,
-#glist,
-#profile {
-  width: auto !important;
-  float: right;
-  font-size: 0.5em;
-  margin-right: 1em;
-  margin-top: 0.5em;
-}
-#profile,
-#community {
+#landingTemp,
+#walletTemp,
+#appTemp,
+#serviceTemp,
+#teamTemp,
+#aboutTemp,
+#netTemp {
   display: none;
 }
-#uForm,
-#about,
-#road,
-#mint {
-  text-align: center;
-  width: 500px;
-  position: relative;
-  left: calc(50% - 250px);
-  margin-left: 1em;
-  display: grid;
-  grid-template-columns: 2;
-  grid-template-rows: 3;
-  grid-gap: 1em;
+@media screen and (max-width: 624px) {
+  @import "layouts/mobil";
 }
-#about,
-#road,
-#mint,
-#social,
-#market {
-  display: none;
+@media screen and (min-width: 625px) {
+  @import "layouts/tab";
 }
-#minthead {
-  grid-column: 1/3;
-  grid-row: 1;
-  text-align: center;
-}
-#mintinfo {
-  grid-column: 1/3;
-  grid-row: 3;
-  text-align: center;
-}
-#greenmnt {
-  grid-row: 2;
-  background: mediumseagreen;
-  padding: 1em;
-  border-radius: 9px;
-}
-#gMintNow {
-  background: cornflowerblue;
-}
-#pubmnt {
-  grid-row: 2;
-  background: cornflowerblue;
-  padding: 1em;
-  border-radius: 9px;
-}
-#uForm {
-  grid-row: 2;
-  grid-column: 2;
-}
-#about {
-  justify-self: end;
-  grid-row: 2;
-  grid-column: 1;
-}
-#road {
-  grid-row: 2;
-  grid-column: 2;
-}
-#mint,
-#market,
-#social {
-  grid-row: 2;
-  grid-column: 1/-1;
-}
-#share {
-  height: 100px;
-  grid-row: 2;
-  grid-column: 1/-1;
-}
-
-.layer {
-  border-radius: 9px;
-  grid-row: 1;
-  grid-column: 1;
-  width: 500px;
-  height: 500px;
-}
-.ly_img {
-  width: 100%;
-  height: 100%;
-}
-a,
-a:hover {
-  text-decoration: none;
-}
-#title {
-  background: rgba(orange, 0.3);
-  color: black;
-  border-radius: 9px;
-  margin-top: 1em;
-}
-#btn {
-  background: mediumseagreen;
-  color: white;
-}
-#msg {
-  position: relative;
-  top: 45px;
-  left: 240px;
-  text-align: center;
-  width: 180px;
-  height: 120px;
-  font-size: 2em;
-  overflow: none;
-  line-break: auto;
-  font-family: "Permanent Marker", cursive;
-}
-ul,
-li {
-  list-style: none;
-  text-align: left;
+@media screen and (min-width: 1150px) {
+  @import "layouts/pc";
 }
