--- a/public/layouts/mobil.scss
+++ b/public/layouts/mobil.scss
@@ -62,6 +62,11 @@
   background: red;
   color: $fc;
 }
+.mslink {
+  width: 25%;
+  float: left;
+  text-align: center;
+}
 .thick1,
 .thick2 {
   background: $bg;
