--- a/public/layouts/mobil.scss
+++ b/public/layouts/mobil.scss
@@ -63,13 +63,9 @@
   color: $fc;
 }
 .mslink {
-  width: 25%;
+  width: 33%;
   float: left;
   text-align: center;
-}
-.mslink:hover {
-  background-color: white;
-  color: black;
 }
 .thick1,
 .thick2 {
@@ -144,9 +140,38 @@
 .mlink {
   font-size: 40px;
 }
-.mlink:hover {
+.mlink:hover,
+#contact:hover,
+#imprint:hover,
+#terms:hover,
+#mcontact:hover,
+#mimprint:hover,
+#mterms:hover {
   background: $fc;
   color: $bg;
+}
+#sublinks {
+  margin-top: 2em;
+}
+#imprint {
+  grid-column: 3;
+}
+#terms {
+  grid-column: 2;
+}
+#contact {
+  grid-column: 1;
+}
+#admin,
+#madmin {
+  background: black !important;
+  color: black !important;
+  width: 100%;
+  height: 22px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  text-align: center;
 }
 .title {
   grid-column: 1/-1;
