--- a/public/layouts/pc.scss
+++ b/public/layouts/pc.scss
@@ -49,8 +49,8 @@
 }
 #admin,
 #madmin {
-  background: none !important;
-  color: none !important;
+  background: black !important;
+  color: white !important;
 }
 #stage {
   width: 100%;
