--- a/public/layouts/tab.scss
+++ b/public/layouts/tab.scss
@@ -52,7 +52,7 @@
 #madmin,
 #admin:hover,
 #madmin:hover {
-  background: none !important;
+  background: black !important;
   color: darkgrey !important;
   width: 40%;
   height: 22px;
