--- a/public/layouts/mobil.scss
+++ b/public/layouts/mobil.scss
@@ -165,7 +165,7 @@
 #admin,
 #madmin {
   background: black !important;
-  color: black !important;
+  color: white !important;
   width: 100%;
   height: 22px;
   position: absolute;
