--- a/public/app.scss
+++ b/public/app.scss
@@ -36,6 +36,15 @@ input[type="checkbox"] {
   width: 100%;
   font-size: 1.3em;
 }
+#logo {
+  margin: 0;
+  padding: 0;
+}
+#logIMG {
+  margin-top: 2px;
+  height: 18px;
+  width: auto;
+}
 #landingTemp,
 #walletTemp,
 #appTemp,
