--- a/public/colorsets/init.scss
+++ b/public/colorsets/init.scss
@@ -1,6 +1,6 @@
 $bg: rgb(67, 67, 67);
-$fc: black;
-$bc: orange;
+$fc: orange;
+$bc: black;
 $close: darkred;
 $border: white;
 $ld: mediumaquamarine;
