--- a/public/colorsets/irie.scss
+++ b/public/colorsets/irie.scss
@@ -1,6 +1,6 @@
 $bg: black;
 $fc: yellow;
 $bc: green;
-$close: red;
-$border: green;
-$ld: yellow;
+$close: rgb(249, 151, 151);
+$border: rgb(143, 171, 143);
+$ld: rgb(242, 247, 170);
