--- a/public/layouts/tab.scss
+++ b/public/layouts/tab.scss
@@ -62,7 +62,8 @@
   grid-column: 3;
   text-align: center;
 }
-#submit_create {
+#submit_create,
+#submit_edit {
   grid-column: 3;
   grid-row: 4;
 }
