--- a/public/app.scss
+++ b/public/app.scss
@@ -68,12 +68,22 @@
     background: $bc;
     color: $ld;
   }
+  #loader,
+  #square:hover {
+    background: $bc;
+  }
+  #loader:hover,
+  #square {
+    background: $ld;
+  }
 }
 
 #init {
   @import "colorsets/init.scss";
   background: $bc;
   color: $fc;
+  text-align: center;
+  padding-left: 0;
 }
 
 #ecogo {
@@ -142,11 +152,21 @@
     background: $bc;
     color: $ld;
   }
+  #loader,
+  #square:hover {
+    background: $bc;
+  }
+  #loader:hover,
+  #square {
+    background: $ld;
+  }
 }
 #eco {
   @import "colorsets/eco.scss";
   background: $bc;
   color: $fc;
+  text-align: center;
+  padding-left: 0;
 }
 
 #iriego {
@@ -215,11 +235,21 @@
     background: $bc;
     color: $ld;
   }
+  #loader,
+  #square:hover {
+    background: $bc;
+  }
+  #loader:hover,
+  #square {
+    background: $ld;
+  }
 }
 #irie {
   @import "colorsets/irie.scss";
   background: $bc;
   color: $fc;
+  text-align: center;
+  padding-left: 0;
 }
 
 #moderngo {
@@ -288,11 +318,21 @@
     background: $bc;
     color: $ld;
   }
+  #loader,
+  #square:hover {
+    background: $bc;
+  }
+  #loader:hover,
+  #square {
+    background: $ld;
+  }
 }
 #modern {
   @import "colorsets/modern.scss";
   background: $bc;
   color: $fc;
+  text-align: center;
+  padding-left: 0;
 }
 
 body {
@@ -354,7 +394,9 @@ input[type="checkbox"] {
 #adminTemp,
 #contactTemp,
 #termsTemp,
-#imprintTemp {
+#imprintTemp,
+#userProfileTemp,
+#adminProfileTemp {
   display: none;
 }
 .tiny {
@@ -384,6 +426,29 @@ button {
   border-radius: 9px;
   font-size: 2em;
   height: 66px;
+}
+#loader {
+  width: 32px;
+  height: 32px;
+  padding: 5px;
+  margin-left: 0.5em;
+  border-radius: 50%;
+  float: left;
+  display: none;
+}
+#square {
+  width: 22px;
+  height: 22px;
+  border-radius: 5%;
+}
+#micro {
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  float: left;
+  margin-top: -3px;
+  padding: 0;
+  justify-self: center;
 }
 @media screen and (max-width: 624px) {
   @import "layouts/mobil";
