--- a/public/layouts/pc.scss
+++ b/public/layouts/pc.scss
@@ -52,7 +52,8 @@
   grid-row: 1/4;
   text-align: center;
 }
-#submit_create {
+#submit_create,
+#submit_edit {
   grid-column: 3;
   grid-row: 4;
 }
