--- a/public/colorsets/eco.scss
+++ b/public/colorsets/eco.scss
@@ -1,6 +1,6 @@
 $bg: black;
-$fc: skyblue;
-$bc: #2c3539;
+$fc: #324a5f;
+$bc: #ccc9dc;
 $close: darkred;
-$border: grey;
-$ld: MidnightBlue;
+$border: #1b2a41;
+$ld: #0c1821;
