--- a/public/colorsets/irie.scss
+++ b/public/colorsets/irie.scss
@@ -1,6 +1,6 @@
-$bg: black;
-$fc: yellow;
-$bc: green;
-$close: rgb(249, 151, 151);
-$border: rgb(143, 171, 143);
-$ld: rgb(242, 247, 170);
+$bg: #eac435;
+$fc: #fb3523;
+$bc: #03cea4;
+$close: #3d001c;
+$border: #8f8f8f;
+$ld: ivory;
