--- a/public/app.scss
+++ b/public/app.scss
@@ -15,8 +15,8 @@
   #nav,
   #foot,
   #stage {
-    background: $bg;
-    background: linear-gradient(90deg, rgba($bg, 0.5) 20%, rgba($ld, 1) 80%);
+    background: $bc;
+    background: linear-gradient(90deg, rgba($bc, 0.5) 20%, rgba($ld, 1) 80%);
   }
   #mobnav {
     background: $bg;
@@ -60,14 +60,12 @@
   textarea,
   button {
     border: 1px solid $border;
-    
   }
-  input{
-  margin: 10px 5px;
+  input {
+    margin: 10px 5px;
 
-  border-radius:1px ;
-  border: 1px solid white;
- 
+    border-radius: 1px;
+    border: 1px solid white;
   }
   button {
     background: $ld;
@@ -97,8 +95,7 @@
 
 #ecogo {
   @import "colorsets/eco.scss";
-  background: $bg;
-  background: linear-gradient(90deg, rgba($bg, 0.5) 20%, rgba($ld, 1) 80%);
+  background: $bc;
   color: $fc;
   .err {
     border: 1px solid $close;
@@ -109,7 +106,8 @@
   #nav,
   #foot,
   #stage {
-    background: $bg;
+    background: $bc;
+    background: linear-gradient(90deg, rgba($bc, 0.5) 20%, rgba($ld, 1) 80%);
   }
   #mobnav {
     background: $bg;
@@ -157,7 +155,6 @@
   input {
     justify-content: center;
     align-items: center;
-  
   }
   button {
     background: $ld;
@@ -186,8 +183,7 @@
 
 #iriego {
   @import "colorsets/irie.scss";
-  background: $bg;
-  background: linear-gradient(90deg, rgba($bg, 0.5) 20%, rgba($ld, 1) 80%);
+  background: $bc;
   color: $fc;
   .err {
     border: 1px solid $close;
@@ -198,7 +194,8 @@
   #nav,
   #foot,
   #stage {
-    background: $bg;
+    background: $bc;
+    background: linear-gradient(90deg, rgba($bc, 0.5) 20%, rgba($ld, 1) 80%);
   }
   #mobnav {
     background: $bg;
@@ -270,8 +267,7 @@
 
 #moderngo {
   @import "colorsets/modern.scss";
-  background: $bg;
-  background: linear-gradient(90deg, rgba($bg, 0.5) 20%, rgba($ld, 1) 80%);
+  background: $bc;
   color: $fc;
   .err {
     border: 1px solid $close;
@@ -282,7 +278,8 @@
   #nav,
   #foot,
   #stage {
-    background: $bg;
+    background: $bc;
+    background: linear-gradient(90deg, rgba($bc, 0.5) 20%, rgba($ld, 1) 80%);
   }
   #mobnav {
     background: $bg;
